--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-select": "2.1.8-rc.1744259191780",
     "@radix-ui/react-slot": "latest",
     "@radix-ui/react-tabs": "latest",
+    "@radix-ui/react-dropdown-menu": "latest",
+    "@radix-ui/react-label": "latest",
     "@radix-ui/react-toast": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
